feat: environment settings

--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,9 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle,java,windows,linux,macos,intellij+all
+
+
+
+
+# env
+.env
