fix: correção em propriedades e barra de vida

--- a/app/src/main/resources/joe.properties
+++ b/app/src/main/resources/joe.properties
@@ -1,6 +1,10 @@
 # Centraliza todas as configurações dos personagens e exibições;
 
 
+# Atenção
+# Ao deixar um espaço depois do valor pode dar erro no código
+# Esse erro só será visto quando foi adicionar o personagem no mapa;
+
 # CONFIGURAÇÔES VISUAIS 
 tela.largura=800
 tela.altura=600
@@ -24,11 +28,11 @@ arqueiro.defesa=5
 
 
 # CAVALEIRO
-cavaleiro.vida.inicial=100 # alterar esse valor vai dar um 'bug' na vida do cavaleiro;
+cavaleiro.vida.inicial=100
 cavaleiro.velocidade=15
 cavaleiro.forca.ataque=25
 cavaleiro.alcance=50
-cavaleiro.tipo.montaria=Cavalo
+cavaleiro.tipo.montaria=cavaleiro2
 cavaleiro.imagem.nome=cavaleiro
 cavaleiro.defesa=10
 
