Conflitos de merge superados

--- a/app/src/main/resources/joe.properties
+++ b/app/src/main/resources/joe.properties
@@ -17,6 +17,10 @@ aldeao.vida.inicial=100
 aldeao.velocidade=10
 aldeao.capacidade.coleta=10
 aldeao.imagem.nome=aldeao
+aldeao.velocidade.desmontado=10
+aldeao.velocidade.montado=18
+aldeao.imagem.montado=aldeaoMontado
+aldeao.tipo.montaria=Jegue
 
 # ARQUEIRO
 arqueiro.vida.inicial=100
@@ -35,6 +39,9 @@ cavaleiro.alcance=50
 cavaleiro.tipo.montaria=cavaleiro2
 cavaleiro.imagem.nome=cavaleiro
 cavaleiro.defesa=10
+cavaleiro.velocidade.desmontado=10
+cavaleiro.velocidade.montado=20
+cavaleiro.imagem.desmontado=cavaleiroDesmontado
 
 
 # CONFIGURAÇÔES DE JOGO
