implementações na coleta

--- a/app/src/main/resources/joe.properties
+++ b/app/src/main/resources/joe.properties
@@ -29,7 +29,7 @@ arqueiro.forca.ataque=15
 arqueiro.alcance=100
 arqueiro.imagem.nome=arqueiro
 arqueiro.defesa=5
-
+arqueiro.flechas.por.madeira=10
 
 # CAVALEIRO
 cavaleiro.vida.inicial=100
